umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_methylglyoxal.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#v4" "O#n2#v2" "C#h#v3" "O#n2#v2"]
      :bonds [[0 1 :single] [1 2 :double] [1 3 :single] [3 4 :double]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#v4" "O#n2#v2" "C#h#v3" "O#n2#v2"]
      :bonds [[0 1 :single] [1 2 :double] [1 3 :single] [3 4 :double]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
