umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_n-methylacetamide.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["C#h3#v" "C#v4" "O#n2#v2" "N#h#n#v2" "C#h3#v"] :bonds [[0 1 "1"] [1 2 "2"] [1 3 "1"] [3 4 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["C#h3#v" "C#v4" "O#n2#v2" "N#h#n#v2" "C#h3#v"] :bonds [[0 1 "1"] [1 2 "2"] [1 3 "1"] [3 4 "1"]] :charge 0 :spin "#u0 #s1"}}}
