umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_n-methylformamide.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h#v3" "O#n2#v2" "N#h#n#v2" "C#h3#v"]
      :bonds [[0 1 "2"] [0 2 "1"] [2 3 "1"]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h#v3" "O#n2#v2" "N#h#n#v2" "C#h3#v"]
      :bonds [[0 1 "2"] [0 2 "1"] [2 3 "1"]]}
    :success true}}
